<resources>
    <string name="app_name">Companion</string>
    <string name="todo">TODO</string>
    <string name="av_auth_method">Available authorization method</string>
    <string name="by_pass">By passport</string>
    <string name="by_ticket">By ticket</string>
    <string name="_4">The last 4 digits of the passport number</string>
    <string name="_00_00">00 00</string>
    <string name="_00">00</string>
    <string name="place">Place</string>
    <string name="vagon">Сoach</string>
    <string name="_000">000</string>
    <string name="confirm">Confirm</string>
    <string name="ticket_number">Ticket №</string>
    <string name="_00000000000000">00000000000000</string>
    <string name="where_to_find">Where to see</string>
    <string name="wtf"><u>ticket and road number?</u></string>
    <string name="bort_journal">Logbook</string>
    <string name="transl">Translator</string>
    <string name="bon">Russian Railways Bonus</string>
    <string name="banc">Central bank rate on</string>
    <string name="rfw">Russia from the train window</string>
    <string name="feedback">Feedback</string>
    <string name="audiobooks">Audiobooks</string>
    <string name="cinema">Cinema</string>
    <string name="books">Books</string>
    <string name="music">Music</string>
    <string name="net">Internet</string>
    <string name="timings">Schedule</string>
    <string name="map">Route map</string>
    <string name="shop_on_board">Shop on board</string>
    <string name="restoraunt">Restaurant</string>
    <string name="for_lux">For Lux passengers</string>
    <string name="cart">Basket</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="translate">Translate</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="finish_shopping">Order</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="cancel">Cancel</string>
    <string name="news">Новости</string>
    <string name="pipe">|</string>
</resources>