<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/close"
            android:contentDescription="@string/todo"
            android:src="@drawable/rzd" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/imageView2"
            android:text="@string/app_name"
            android:textColor="#444"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/imageView2"
            android:background="#999" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_bar"
        android:layout_above="@id/clear_cart"
        android:layout_marginBottom="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/conform_cart"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/finish_shopping"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="#000"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_confirm_auth"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clear_cart"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/clear_cart"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_above="@id/conform_cart"
        android:textColor="#000"
        android:background="@drawable/button_red"/>

</RelativeLayout>