<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/bonus_rel"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/rjd_bonus"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:background="#999"
            android:contentDescription="@string/todo"
            android:src="@drawable/bonus_bg"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            android:text="@string/bon" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_sun_24"
            android:layout_above="@id/textView7"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/todo" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bank_rel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bonus_rel"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/pricing"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/bank_bg"
            android:scaleType="centerCrop"
            android:background="#999"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView71"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/banc" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/russia_from_window_rel"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_below="@id/bank_rel"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/russia_from_window"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/rfw_bg"
            android:scaleType="centerCrop"
            android:background="#999"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView72"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/rfw" />

        <ImageView
            android:id="@+id/imageView31"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/church"
            android:layout_above="@id/textView72"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/todo" />

    </RelativeLayout>

</RelativeLayout>