<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/rzd" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/imageView2"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textColor="#444"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/more"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_more_vert_24" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/imageView2"
            android:background="#999"/>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_bar" />

    <RelativeLayout
        android:id="@+id/more_lay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/top_bar"
        android:background="#EEE"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/r1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/vip_card"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imageView5"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:textColor="#444"
                android:text="@string/for_lux"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/r2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/r1"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <ImageView
                android:id="@+id/imageView51"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/feedback"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textView121"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imageView51"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:textColor="#444"
                android:text="@string/feedback"/>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>