<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    android:paddingTop="10dp">

    <RelativeLayout
        android:id="@+id/pipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/pipe"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp">

        <ImageView
            android:id="@+id/journal"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:background="#999"
            android:contentDescription="@string/todo"
            android:src="@drawable/rzd" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            android:text="@string/bort_journal" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/book"
            android:layout_above="@id/textView6"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/todo" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/pipe"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        tools:ignore="RelativeOverlap">

        <ImageView
            android:id="@+id/translator"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/rzd"
            android:background="#999"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            android:text="@string/transl" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/translate"
            android:layout_above="@id/textView7"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/todo" />

    </RelativeLayout>
</RelativeLayout>